<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.codenjoy</groupId>
    <artifactId>engine</artifactId>
    <version>1.0.27</version>

    <properties>
        <jetty.version>9.3.14.v20161028</jetty.version>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <logback.version>1.1.7</logback.version>
        <commons-collections.version>3.2.2</commons-collections.version>
        <commons-lang.version>2.6</commons-lang.version>
        <commons-codec.version>1.11</commons-codec.version>
        <org.json.version>20160810</org.json.version>
        <com.cedarsoftware.jsonio.version>4.9.9</com.cedarsoftware.jsonio.version>

        <fest-reflect.version>1.4.1</fest-reflect.version>
        <fest-assert.version>1.4</fest-assert.version>
        <junit.version>4.12</junit.version>
        <mockito.version>1.10.19</mockito.version>

        <maven-compiler.version>3.5.1</maven-compiler.version>
        <maven-resources.version>2.7</maven-resources.version>
        <maven-antrun.version>1.8</maven-antrun.version>
        <maven-license.version>1.16</maven-license.version>
        <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
        <maven-clean-plugin.version>3.0.0</maven-clean-plugin.version>

        <user.resources>src/main/webapp/resources/user</user.resources>
        <engine.libs>${user.resources}/engine-libs.zip</engine.libs>
        <engine.packs>${project.build.directory}/libs</engine.packs>
    </properties>

    <repositories>
        <repository>
            <id>codenjoy-releases</id>
            <url>https://github.com/codenjoyme/codenjoy-repo/raw/master/snapshots</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.eclipse.jetty.websocket</groupId>
            <artifactId>websocket-server</artifactId>
            <version>${jetty.version}</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty.websocket</groupId>
            <artifactId>websocket-client</artifactId>
            <version>${jetty.version}</version>
        </dependency>

        <dependency>
            <groupId>commons-collections</groupId>
            <artifactId>commons-collections</artifactId>
            <version>${commons-collections.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
            <version>${commons-lang.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>${commons-codec.version}</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>${org.json.version}</version>
        </dependency>
        <dependency>
            <groupId>com.cedarsoftware</groupId>
            <artifactId>json-io</artifactId>
            <version>${com.cedarsoftware.jsonio.version}</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.easytesting</groupId>
            <artifactId>fest-assert</artifactId>
            <version>${fest-assert.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.easytesting</groupId>
            <artifactId>fest-reflect</artifactId>
            <version>${fest-reflect.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/java</directory>
                <filtering>true</filtering>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
            <resource>
                <directory>src</directory>
                <includes>
                    <include>license/**</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler.version}</version>
                <configuration>
                    <encoding>utf8</encoding>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>${maven-clean-plugin.version}</version>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>${user.resources}</directory>
                            <includes>
                                <include>**/engine-libs.zip</include>
                            </includes>
                            <followSymlinks>false</followSymlinks>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>${maven-antrun.version}</version>
                <executions>
                    <execution>
                        <phase>verify</phase>
                        <configuration>
                            <target>
                                <mkdir dir="${engine.packs}" />
                                <copy todir="${engine.packs}">
                                    <resources>
                                        <file file="setup.bat"/>
                                        <file file="${project.build.directory}/engine-${project.version}.jar"/>
                                        <file file="${project.build.directory}/engine-${project.version}-sources.jar"/>
                                    </resources>
                                </copy>
                                <copy file="pom.xml"
                                      tofile="${engine.packs}/engine-${project.version}-pom.xml"/>
                                <copy file="../pom.xml"
                                      tofile="${engine.packs}/games-${project.version}-pom.xml"/>

                                <delete file="${engine.libs}" />
                                <zip destfile="${engine.libs}"
                                     basedir="${engine.packs}"
                                     includes="**"
                                     excludes=""
                                     update="true"/>

                                <zip destfile="${project.build.directory}/engine-${project.version}.jar"
                                     basedir="src/main/webapp"
                                     includes="**"
                                     excludes=""
                                     update="true"/>
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven-source-plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>${maven-license.version}</version>
                <configuration>
                    <licenseName>gpl_v3</licenseName>
                    <licenseResolver>${project.baseUri}/src/license</licenseResolver>
                    <organizationName>Codenjoy</organizationName>
                    <projectName>Codenjoy - it's a dojo-like platform from developers to developers.</projectName>
                    <inceptionYear>2018</inceptionYear>
                    <canUpdateCopyright>false</canUpdateCopyright>
                    <canUpdateDescription>false</canUpdateDescription>
                    <canUpdateLicense>false</canUpdateLicense>
                </configuration>
                <executions>
                    <execution>
                        <id>first</id>
                        <goals>
                            <goal>update-file-header</goal>
                        </goals>
                        <phase>process-sources</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>